2009-02-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for bug #10326: htmlArea RTE: Cleaning on paste broken in older versions of Mozilla/Firefox

2009-02-03  Francois Suter  <francois@typo3.org>

	* Fixed bug #1527: t3lib_svbase: Method init returns wrong value  (thanks to Stefano Kowalke and Michael Miousse)

2009-02-03  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #9600: Frontend Edit Panel is not compatible with subdomains and RealURL (thanks to Xavier Perseguers)
	* Added feature #10155: Add controller switching for frontend editing

2009-02-03  Ingo Renner  <ingo@typo3.org>

	* Changed the pages description field from a one line input to a textarea

2009-02-02  Ingo Renner  <ingo@typo3.org>

	* Fixed order of fields in TCEforms for table pages, type external URL which was inconsitant to the other types

2009-02-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10323: htmlArea RTE: hotkey CTRL+0 is not honoured
	* Fixed bug #10324: htmlArea RTE: Configured hotkeys are not honoured in Safari
 	* Added feature #10325: htmlArea RTE: Make hotkey for enableWordClean feature configurable
	* Fixed bug #10326: htmlArea RTE: Cleaning on paste broken in older versions of Mozilla/Firefox

2009-02-01  Ingo Renner  <ingo@typo3.org>

	* Fixed broken icon for the TYPO3 manual with t3skin
	* Fixed look of the logout button in Safari after the introduction of ExtJs
	* Fixed list minus bullet icon in t3skin, was missing a solid background

2009-02-01  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10121: New template-function to add extJS inline code

2009-01-31  Kasper Skaarhoj  <kasper@typo3.org>

	* Added a checkbox with the previewlink button in Web>Version module so that whole workspace can be browser (but starting out with a specific page).
	* Added a hook for processing external links made through typolink and makelinks.